# SOL2INK

./: .gitignore  DATASET_SHARING_GUIDE.md  README.md  SWAGGER_COMPLETION_STATUS.md  SWAGGER_INTEGRATION_SUMMARY.md  config.json  config.py  query.sh  setup-config.py  test_integration.py
.claude/: settings.local.json
SOL2INK-frontend/: .env.example  README.md  package-lock.json  package.json
docs/: BINDING_AND_EMBEDDING_GUIDE.md  CLAUDE.md  HOW_TO_USE_TRAINING_SYSTEM.md  SIDE_BY_SIDE_COMPARISON.md  SYSTEM_WORKING_SUMMARY.md  TRAINING_SYSTEM_SUMMARY.md  format_comparison.md  plan.md  prd.md  rag_dev_assistant_checklist.md  test_contract_matching_standalone.py  test_training_system.py  (+1 more)
shuttle-backend/: .gitignore  API_USAGE_EXAMPLES.md  Cargo-backup.toml  Cargo-standalone.toml  Cargo.toml  Dockerfile  QUICK_START.md  README.md  README_MIGRATION_AI.md  SETUP_GUIDE.md  Shuttle.toml  create_training_data.py  demo.html  deploy.sh  dev.sh  embed_codebase.py  embed_migration_guides.py  export_dataset.py  fix_api_responses.py  requirements.txt  run_server.sh  setup_embeddings.sh  simple_test_server.rs  start-backend.sh  test_api.rs  test_api.sh  test_api_examples.sh  test_ask_endpoint.py  test_connection.rs  test_gemini.py  test_gemini_api.py  test_migration_queries.py  test_qdrant.py  test_rag_directly.py  test_results.json  test_setup.sh  validate_training_data.py  verify-deployment.sh
shuttle-backend/exported_dataset/: documents.json  metadata.json  readme.md  sample_responses.json  usage_examples.json
shuttle-backend/src/: chat.rs  contract_matcher.rs  contract_service.rs  defi_service.rs  gemini_client.rs  hyperbridge.rs  lib.rs  main.rs  polkadot.rs  polkadot_defi_knowledge.rs  rag_system.rs  sample_data.rs  standalone.rs  test_contract_matching.rs  training_embedder.rs
shuttle-backend/src/parsers/: ink_parser.rs  mod.rs  solidity_parser.rs
(+31 files in other folders)
